--- a/ShoppingSystem/Base.lproj/Main.storyboard
+++ b/ShoppingSystem/Base.lproj/Main.storyboard
@@ -5,35 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--我-->
-        <scene sceneID="QDz-PS-2lc">
-            <objects>
-                <tableViewController id="I7j-xg-Cds" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="U1f-Z0-TWh">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="jIJ-Ig-VPa">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="jIJ-Ig-VPa" id="B8r-sV-vTi">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="I7j-xg-Cds" id="Ijp-XH-tjE"/>
-                            <outlet property="delegate" destination="I7j-xg-Cds" id="Ra6-TW-zwN"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" title="我" image="snslogin_default" id="iwy-n8-jT2"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ELl-b4-HG3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1974" y="-1599"/>
-        </scene>
         <!--Main Tab Bar View Controller-->
         <scene sceneID="Eup-Sc-bGM">
             <objects>
@@ -48,12 +19,47 @@
                         <segue destination="dht-jC-i4Y" kind="relationship" relationship="viewControllers" id="RkZ-4C-37s"/>
                         <segue destination="LtF-Xb-dB0" kind="relationship" relationship="viewControllers" id="0go-WF-N1z"/>
                         <segue destination="OKX-l6-jM3" kind="relationship" relationship="viewControllers" id="q0c-FB-qaz"/>
-                        <segue destination="I7j-xg-Cds" kind="relationship" relationship="viewControllers" id="DyQ-WG-mFX"/>
+                        <segue destination="3cp-Pm-nUq" kind="relationship" relationship="viewControllers" id="gfq-0T-bMd"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rnt-it-Fiq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="15" y="-2505"/>
+        </scene>
+        <!--我-->
+        <scene sceneID="4VX-nD-6GE">
+            <objects>
+                <collectionViewController id="3cp-Pm-nUq" customClass="MineCollectionViewController" customModule="ShoppingSystem" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="8Wn-Xi-dc4">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="803-Dg-NGY">
+                            <size key="itemSize" width="50" height="50"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="QNw-lq-Uhn">
+                                <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="3cp-Pm-nUq" id="RGq-Sx-BQf"/>
+                            <outlet property="delegate" destination="3cp-Pm-nUq" id="SvC-fw-5nx"/>
+                        </connections>
+                    </collectionView>
+                    <tabBarItem key="tabBarItem" title="我" image="snslogin_default" id="CAK-RH-bYx"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kAr-cY-RPw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2113" y="-1692"/>
         </scene>
         <!--消息-->
         <scene sceneID="a1w-JS-j8J">
