--- a/ShoppingSystem/Mine/View/CustomCollectionViewCell.xib
+++ b/ShoppingSystem/Mine/View/CustomCollectionViewCell.xib
@@ -3,17 +3,71 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CustomCollectionViewCell" customModule="ShoppingSystem" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+            <rect key="frame" x="0.0" y="0.0" width="411" height="104"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="411" height="104"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KEQ-tt-mW6">
+                        <rect key="frame" x="30" y="10" width="84" height="84"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="KEQ-tt-mW6" secondAttribute="height" id="lKk-75-DI6"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7RA-1b-UGa">
+                        <rect key="frame" x="124" y="10" width="227" height="84"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="query_correct_arrow_icon" translatesAutoresizingMaskIntoConstraints="NO" id="m4S-nw-siY">
+                        <rect key="frame" x="361" y="37" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="VX3-Yf-QAx"/>
+                            <constraint firstAttribute="width" constant="30" id="o7s-qk-EJk"/>
+                        </constraints>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rSn-HR-71E">
+                        <rect key="frame" x="0.0" y="103" width="411" height="1"/>
+                        <color key="backgroundColor" red="0.79607843137254897" green="0.79607843137254897" blue="0.79607843137254897" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="ltV-ED-jwa"/>
+                        </constraints>
+                    </view>
+                </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="m4S-nw-siY" secondAttribute="trailing" constant="20" id="85h-p6-ame"/>
+                <constraint firstItem="m4S-nw-siY" firstAttribute="leading" secondItem="7RA-1b-UGa" secondAttribute="trailing" constant="10" id="Bvn-HT-6aA"/>
+                <constraint firstItem="7RA-1b-UGa" firstAttribute="leading" secondItem="KEQ-tt-mW6" secondAttribute="trailing" constant="10" id="Iup-ip-MIY"/>
+                <constraint firstAttribute="bottom" secondItem="rSn-HR-71E" secondAttribute="bottom" id="UDR-tU-wwV"/>
+                <constraint firstItem="KEQ-tt-mW6" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="YrP-DG-tEV"/>
+                <constraint firstItem="KEQ-tt-mW6" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="30" id="bKM-88-kYL"/>
+                <constraint firstAttribute="trailing" secondItem="rSn-HR-71E" secondAttribute="trailing" id="dpW-pF-gE7"/>
+                <constraint firstAttribute="bottom" secondItem="KEQ-tt-mW6" secondAttribute="bottom" constant="10" id="eh3-0Z-fAb"/>
+                <constraint firstItem="7RA-1b-UGa" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="iBn-zB-VZs"/>
+                <constraint firstItem="rSn-HR-71E" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="n9H-fh-yoC"/>
+                <constraint firstItem="KEQ-tt-mW6" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="nGj-0w-QlJ"/>
+                <constraint firstItem="m4S-nw-siY" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="zLM-cB-kLj"/>
+                <constraint firstItem="7RA-1b-UGa" firstAttribute="height" secondItem="KEQ-tt-mW6" secondAttribute="height" id="zVW-lk-2AY"/>
+            </constraints>
+            <size key="customSize" width="411" height="104"/>
+            <connections>
+                <outlet property="tagImageView" destination="KEQ-tt-mW6" id="zTU-ZU-RPD"/>
+                <outlet property="titleLabel" destination="7RA-1b-UGa" id="0hV-Zx-d1o"/>
+            </connections>
+            <point key="canvasLocation" x="300.5" y="307"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="query_correct_arrow_icon" width="23" height="23"/>
+    </resources>
 </document>
