--- a/ShoppingSystem/MyOrdersCollectionViewCell.xib
+++ b/ShoppingSystem/MyOrdersCollectionViewCell.xib
@@ -1,18 +1,84 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="MyOrdersCollectionViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="MyOrdersCollectionViewCell" customModule="ShoppingSystem" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="379" height="91"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                <rect key="frame" x="0.0" y="0.0" width="379" height="91"/>
+                <subviews>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8lP-Fb-7JN">
+                        <rect key="frame" x="11" y="12" width="106" height="68"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <state key="normal" title="待收货" image="user_set_icon_wallet">
+                            <color key="titleColor" red="0.79607843140000001" green="0.79607843140000001" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
+                        <connections>
+                            <action selector="ReceiptButtonClicked:" destination="gTV-IL-0wX" eventType="touchUpInside" id="OYn-fM-0gc"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gnh-5h-tib">
+                        <rect key="frame" x="137" y="12" width="106" height="68"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <state key="normal" title="待发货" image="user_set_icon_mission">
+                            <color key="titleColor" red="0.79607843140000001" green="0.79607843140000001" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
+                        <connections>
+                            <action selector="ToBeShippedButtonClicked:" destination="gTV-IL-0wX" eventType="touchUpInside" id="HXT-MW-iDw"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lfo-TB-R6R">
+                        <rect key="frame" x="263" y="12" width="106" height="68"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <state key="normal" title="待付款" image="user_set_icon_mall">
+                            <color key="titleColor" red="0.79607843140000001" green="0.79607843140000001" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </state>
+                        <connections>
+                            <action selector="needPayButtonClicked:" destination="gTV-IL-0wX" eventType="touchUpInside" id="DB8-eD-6EB"/>
+                        </connections>
+                    </button>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AKY-8k-Nbl">
+                        <rect key="frame" x="0.0" y="90" width="379" height="1"/>
+                        <color key="backgroundColor" red="0.79607843137254897" green="0.79607843137254897" blue="0.79607843137254897" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="pov-ts-Hma"/>
+                        </constraints>
+                    </view>
+                </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="8lP-Fb-7JN" firstAttribute="width" secondItem="gnh-5h-tib" secondAttribute="width" id="0ga-bC-Jrg"/>
+                <constraint firstItem="Lfo-TB-R6R" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="36Z-vL-DKp"/>
+                <constraint firstAttribute="bottom" secondItem="AKY-8k-Nbl" secondAttribute="bottom" id="5dA-XW-ga8"/>
+                <constraint firstAttribute="trailing" secondItem="AKY-8k-Nbl" secondAttribute="trailing" id="DRV-4f-dqq"/>
+                <constraint firstItem="gnh-5h-tib" firstAttribute="width" secondItem="gTV-IL-0wX" secondAttribute="width" multiplier="0.28" id="EVV-X3-gRM"/>
+                <constraint firstItem="AKY-8k-Nbl" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="EX8-K7-WHe"/>
+                <constraint firstItem="gnh-5h-tib" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="Hoo-ek-vEf"/>
+                <constraint firstItem="Lfo-TB-R6R" firstAttribute="height" secondItem="gnh-5h-tib" secondAttribute="height" id="LGb-z9-SGA"/>
+                <constraint firstItem="Lfo-TB-R6R" firstAttribute="width" secondItem="gnh-5h-tib" secondAttribute="width" id="LJH-LH-yN3"/>
+                <constraint firstItem="Lfo-TB-R6R" firstAttribute="leading" secondItem="gnh-5h-tib" secondAttribute="trailing" constant="20" id="QWa-4s-t2S"/>
+                <constraint firstItem="gnh-5h-tib" firstAttribute="leading" secondItem="8lP-Fb-7JN" secondAttribute="trailing" constant="20" id="U6n-ew-e1D"/>
+                <constraint firstItem="gnh-5h-tib" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="X3E-5L-vVV"/>
+                <constraint firstItem="8lP-Fb-7JN" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="gSF-Eg-7fd"/>
+                <constraint firstItem="8lP-Fb-7JN" firstAttribute="height" secondItem="gnh-5h-tib" secondAttribute="height" id="lpB-Hm-mXM"/>
+                <constraint firstItem="gnh-5h-tib" firstAttribute="height" secondItem="gTV-IL-0wX" secondAttribute="height" multiplier="0.75" id="yuo-J4-V89"/>
+            </constraints>
+            <size key="customSize" width="379" height="91"/>
+            <point key="canvasLocation" x="263.5" y="268.5"/>
         </collectionViewCell>
     </objects>
+    <resources>
+        <image name="user_set_icon_mall" width="20" height="20"/>
+        <image name="user_set_icon_mission" width="20" height="20"/>
+        <image name="user_set_icon_wallet" width="20" height="20"/>
+    </resources>
 </document>
