--- a/ShoppingSystem/UploadContentView.xib
+++ b/ShoppingSystem/UploadContentView.xib
@@ -3,12 +3,12 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UploadContentView" customModule="ShoppingSystem" customModuleProvider="target">
             <connections>
+                <outlet property="collectionView" destination="zd1-bC-Sst" id="MCI-Iz-3EF"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="Iho-Ai-9OO"/>
             </connections>
         </placeholder>
@@ -18,34 +18,37 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut " textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="E5d-2w-mtd">
-                    <rect key="frame" x="15" y="0.0" width="345" height="400"/>
+                    <rect key="frame" x="15" y="0.0" width="345" height="334"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a2x-Gx-t5z">
-                    <rect key="frame" x="0.0" y="400" width="375" height="267"/>
+                    <rect key="frame" x="0.0" y="334" width="375" height="334"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Artboard 1" translatesAutoresizingMaskIntoConstraints="NO" id="U7i-Wu-LA2">
-                            <rect key="frame" x="30" y="26" width="214" height="214"/>
-                            <color key="backgroundColor" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1" colorSpace="calibratedRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="U7i-Wu-LA2" secondAttribute="height" id="QAB-9j-hZl"/>
-                            </constraints>
-                        </imageView>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="zd1-bC-Sst">
+                            <rect key="frame" x="15" y="10" width="345" height="314"/>
+                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="qJa-5k-iG3">
+                                <size key="itemSize" width="50" height="50"/>
+                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            </collectionViewFlowLayout>
+                        </collectionView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="U7i-Wu-LA2" firstAttribute="centerY" secondItem="a2x-Gx-t5z" secondAttribute="centerY" id="N4o-Eb-0Tt"/>
-                        <constraint firstItem="U7i-Wu-LA2" firstAttribute="height" secondItem="a2x-Gx-t5z" secondAttribute="height" multiplier="0.8" id="TKc-ox-4s2"/>
-                        <constraint firstItem="U7i-Wu-LA2" firstAttribute="leading" secondItem="a2x-Gx-t5z" secondAttribute="leading" constant="30" id="cz7-pC-Rop"/>
+                        <constraint firstItem="zd1-bC-Sst" firstAttribute="leading" secondItem="a2x-Gx-t5z" secondAttribute="leading" constant="15" id="4qD-D2-d1O"/>
+                        <constraint firstAttribute="bottom" secondItem="zd1-bC-Sst" secondAttribute="bottom" constant="10" id="agY-mf-9wV"/>
+                        <constraint firstItem="zd1-bC-Sst" firstAttribute="top" secondItem="a2x-Gx-t5z" secondAttribute="top" constant="10" id="aqz-Gm-fmA"/>
+                        <constraint firstAttribute="trailing" secondItem="zd1-bC-Sst" secondAttribute="trailing" constant="15" id="t8p-zz-6YW"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="E5d-2w-mtd" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.6" id="K51-1B-uwc"/>
-                <constraint firstItem="a2x-Gx-t5z" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.4" id="LKw-bd-rmX"/>
+                <constraint firstItem="E5d-2w-mtd" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.5" id="K51-1B-uwc"/>
+                <constraint firstItem="a2x-Gx-t5z" firstAttribute="height" secondItem="iN0-l3-epB" secondAttribute="height" multiplier="0.5" id="LKw-bd-rmX"/>
                 <constraint firstItem="E5d-2w-mtd" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="Sjc-lE-CvX"/>
                 <constraint firstAttribute="trailing" secondItem="E5d-2w-mtd" secondAttribute="trailing" constant="15" id="YMR-6T-6qr"/>
                 <constraint firstItem="E5d-2w-mtd" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="f8O-25-0Tb"/>
@@ -57,7 +60,4 @@
             <point key="canvasLocation" x="291.5" y="325.5"/>
         </view>
     </objects>
-    <resources>
-        <image name="Artboard 1" width="24" height="24"/>
-    </resources>
 </document>
